--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="css/style.css" />
+
+    <link rel="shortcut icon" href="images/favicon.png" />
+
     <title>Digital Agency</title>
   </head>
   <body>
@@ -64,9 +68,9 @@
           your goals.
         </h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo itaque
-          nam saepe vero voluptatem vel fuga a eaque earum alias ipsam
-          aspernatur culpa maxime laboriosam, impedit quae officiis consectetur
+          You can order a simple website. You pay only $100 for our work +
+          payment for hosting, domain and security certificate, if we agreed the
+          whole project for you and received all the necessary content from you.
         </p>
         <a href="contact.html" class="btn">Get Started</a>
       </div>
