--- a/index.html
+++ b/index.html
@@ -17,41 +17,29 @@
       <div class="toggle"></div>
       <div class="navigation">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li class="navigation-link">Home</li>
           <li><a href="services.html">Services</a></li>
           <li><a href="work.html">Work</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
+
         <div class="social-bar">
           <ul>
             <li>
               <a href="https://github.com/dev-from-cbd">
-                <img src="images/github.png" target="_blank" alt="GitHub" />
+                <img src="images/github-icon.png" alt="GitHub" />
               </a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/neoguru">
-                <img src="images/linkedin.png" target="_blank" alt="LinkedIn" />
+                <img src="images/linkedin-icon.png" alt="LinkedIn" />
               </a>
             </li>
             <li>
               <a href="https://www.facebook.com/darentacom">
-                <img src="images/fb.png" target="_blank" alt="FaceBook" />
+                <img src="images/facebook-icon.png" alt="FaceBook" />
               </a>
             </li>
-
-            <!-- 
-            <li>
-              <a href="https://twitter.com">
-                <img src="images/twitter.png" target="_blank" alt="" />
-              </a>
-            </li>
-            <li>
-              <a href="https://instagram.com">
-                <img src="images/instagram.png" target="_blank" alt="" />
-              </a>
-            </li>
-            -->
           </ul>
           <a href="mailto:veryfatwombat@gmail.com" class="email-icon">
             <img src="images/email.png" alt="email" />
