--- a/services.html
+++ b/services.html
@@ -5,39 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Creative Agency</title>
+
+    <link rel="shortcut icon" href="images/favicon.png" />
+
+    <title>Digital Agency</title>
   </head>
   <body>
     <header>
-      <div class="logo">Creative Agency</div>
+      <div class="logo">Digital Agency</div>
       <div class="toggle"></div>
       <div class="navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="services.html">Services</a></li>
+          <li class="navigation-link">Services</li>
           <li><a href="work.html">Work</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
+
         <div class="social-bar">
           <ul>
             <li>
-              <a href="https://facebook.com">
-                <img src="images/facebook.png" target="_blank" alt="" />
+              <a href="https://github.com/dev-from-cbd">
+                <img src="images/github-icon.png" alt="GitHub" />
               </a>
             </li>
             <li>
-              <a href="https://twitter.com">
-                <img src="images/twitter.png" target="_blank" alt="" />
+              <a href="https://www.linkedin.com/in/neoguru">
+                <img src="images/linkedin-icon.png" alt="LinkedIn" />
               </a>
             </li>
             <li>
-              <a href="https://instagram.com">
-                <img src="images/instagram.png" target="_blank" alt="" />
+              <a href="https://www.facebook.com/darentacom">
+                <img src="images/facebook-icon.png" alt="FaceBook" />
               </a>
             </li>
           </ul>
-          <a href="mailto:you@email.com" class="email-icon">
-            <img src="images/email.png" alt="" />
+          <a href="mailto:veryfatwombat@gmail.com" class="email-icon">
+            <img src="images/email.png" alt="email" />
           </a>
         </div>
       </div>
@@ -47,62 +51,69 @@
       <div class="title">
         <h1>Services that we can help you with</h1>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-          iusto molestias accusamus rem nobis est, et laborum harum doloremque
-          nemo non, minima quos totam labore maxime iste alias ut esse? Repellat
-          eaque reiciendis laboriosam corporis fuga vero ratione veritatis
-          numquam, libero magni voluptatum omnis molestiae officiis
-          exercitationem qui quidem nam.
+          Our main service at the moment is the development of simple landing
+          pages. But our clients can earn more money if we discuss a wide range
+          of services after the first stage of work.
         </p>
       </div>
       <div class="services">
         <div class="service">
           <div class="icon">
-            <img src="images/001.png" alt="" />
+            <img src="images/001.png" alt="Web Design" />
           </div>
-          <h2>Design</h2>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum omnis
-          nemo sapiente in quidem sed dolores cumque! Ut, est aliquid!
+          <h2>Web Design</h2>
+          We can work on your design to showcase your images, products,
+          services, team, office and anything else you send us.
         </div>
+
         <div class="service">
           <div class="icon">
-            <img src="images/002.png" alt="" />
+            <img src="images/002.png" alt="Web Development" />
           </div>
-          <h2>Development</h2>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum omnis
-          nemo sapiente in quidem sed dolores cumque! Ut, est aliquid!
+          <h2>Web Development</h2>
+          Web development is our core business. We write the code, creating the
+          front end of your site for you, so that your potential customers can
+          learn about your products or services.
         </div>
+
         <div class="service">
           <div class="icon">
-            <img src="images/003.png" alt="" />
+            <img src="images/003.png" alt="SEO" />
           </div>
           <h2>SEO</h2>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum omnis
-          nemo sapiente in quidem sed dolores cumque! Ut, est aliquid!
+          We can audit your site and offer promotion of your site in Google for
+          important keywords. If we do not achieve a positive result, then we
+          will refund you 50% of the advertising budget.
         </div>
+
         <div class="service">
           <div class="icon">
-            <img src="images/004.png" alt="" />
+            <img src="images/004.png" alt="Digital Marketing" />
           </div>
-          <h2>Marketing</h2>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum omnis
-          nemo sapiente in quidem sed dolores cumque! Ut, est aliquid!
+          <h2>Digital Marketing</h2>
+          We love to provide integrated marketing to find your target audience
+          of our customers and then we bring your products and services to
+          market.
         </div>
+
         <div class="service">
           <div class="icon">
-            <img src="images/005.png" alt="" />
+            <img src="images/005.png" alt="Mobile App Development" />
           </div>
-          <h2>App Development</h2>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum omnis
-          nemo sapiente in quidem sed dolores cumque! Ut, est aliquid!
+          <h2>Mobile App Development</h2>
+          We can develop a simple Android and iOS mobile app where you need a
+          nice UX/UI interface but don't need a lot of back-end to get started.
         </div>
+
         <div class="service">
           <div class="icon">
-            <img src="images/006.png" alt="" />
+            <img src="images/006.png" alt="Error Bug Fixing" />
           </div>
-          <h2>Error Fixing</h2>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum omnis
-          nemo sapiente in quidem sed dolores cumque! Ut, est aliquid!
+          <h2>Error Bug Fixing</h2>
+          If you have an old site that has problems, then we can spend our time
+          looking for problems in the code. Or your site is outdated and you
+          want to make it adaptive for mobile devices of your customers, then we
+          are there!
         </div>
       </div>
     </section>
