--- a/work.html
+++ b/work.html
@@ -5,39 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Creative Agency</title>
+
+    <link rel="shortcut icon" href="images/favicon.png" />
+
+    <script
+      src="https://kit.fontawesome.com/bd8d0c3284.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <title>Digital Agency</title>
   </head>
   <body>
     <header>
-      <div class="logo">Creative Agency</div>
+      <div class="logo">Digital Agency</div>
       <div class="toggle"></div>
       <div class="navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="work.html">Work</a></li>
+          <li class="navigation-link">Work</li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
+
         <div class="social-bar">
           <ul>
             <li>
-              <a href="https://facebook.com">
-                <img src="images/facebook.png" target="_blank" alt="" />
+              <a href="https://github.com/dev-from-cbd">
+                <img src="images/github-icon.png" alt="GitHub" />
               </a>
             </li>
             <li>
-              <a href="https://twitter.com">
-                <img src="images/twitter.png" target="_blank" alt="" />
+              <a href="https://www.linkedin.com/in/neoguru">
+                <img src="images/linkedin-icon.png" alt="LinkedIn" />
               </a>
             </li>
             <li>
-              <a href="https://instagram.com">
-                <img src="images/instagram.png" target="_blank" alt="" />
+              <a href="https://www.facebook.com/darentacom">
+                <img src="images/facebook-icon.png" alt="FaceBook" />
               </a>
             </li>
           </ul>
-          <a href="mailto:you@email.com" class="email-icon">
-            <img src="images/email.png" alt="" />
+          <a href="mailto:veryfatwombat@gmail.com" class="email-icon">
+            <img src="images/email.png" alt="email" />
           </a>
         </div>
       </div>
@@ -47,110 +56,84 @@
       <div class="title">
         <h1>Some of our finest work</h1>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-          iusto molestias accusamus rem nobis est, et laborum harum doloremque
-          nemo non, minima quos totam labore maxime iste alias ut esse? Repellat
-          eaque reiciendis laboriosam corporis fuga vero ratione veritatis
-          numquam, libero magni voluptatum omnis molestiae officiis
-          exercitationem qui quidem nam.
+          So far we do not have a very large portfolio, but we will be very
+          happy to add your site to the list of our works! We try to make sure
+          that each new work of ours would be better than the previous one.
+          Therefore, you can be sure that your site will look better than what
+          we did last year or 2 years ago, as we accumulate a lot of successful
+          experience!
         </p>
       </div>
 
       <div class="portfolio">
         <div class="item">
-          <img src="images/portfolio-item1.jpg" alt="" />
+          <img src="images/1iphone.png" alt="iPhone Bendigo" />
           <div class="action">
-            <a href="#">Launch</a>
+            <a href="https://iphonebendigo.com/" target="_blank">Launch</a>
           </div>
         </div>
         <div class="item">
-          <img src="images/portfolio-item2.jpg" alt="" />
+          <img src="images/2barbershop.png" alt="Barbershop" />
           <div class="action">
-            <a href="#">Launch</a>
+            <a
+              href="https://dev-from-cbd.github.io/Responsive-Website-Using-HTML5-and-CSS3"
+              target="_blank"
+              >Launch</a
+            >
           </div>
         </div>
         <div class="item">
-          <img src="images/portfolio-item3.jpg" alt="" />
+          <img src="images/3barbershop.png" alt="Barbershop" />
           <div class="action">
-            <a href="#">Launch</a>
+            <a
+              href="https://dev-from-cbd.github.io/js-css3-html5"
+              target="_blank"
+              >Launch</a
+            >
           </div>
         </div>
         <div class="item">
-          <img src="images/portfolio-item4.jpg" alt="" />
+          <img src="images/4blades.png" alt="Diamond cutting blades" />
           <div class="action">
-            <a href="#">Launch</a>
+            <a
+              href="https://dev-from-cbd.github.io/diamond-cutting-blades"
+              target="_blank"
+              >Launch</a
+            >
           </div>
         </div>
+
         <div class="item">
-          <img src="images/portfolio-item5.jpg" alt="" />
+          <img src="images/5barbershop.png" alt="Barbershop" />
           <div class="action">
-            <a href="#">Launch</a>
+            <a href="https://dev-from-cbd.github.io/bootstrap5" target="_blank"
+              >Launch</a
+            >
           </div>
         </div>
+
         <div class="item">
-          <img src="images/portfolio-item6.jpg" alt="" />
+          <img src="images/6codezima.png" alt="CodeZima" />
           <div class="action">
-            <a href="#">Launch</a>
+            <a href="https://codezima.com" target="_blank">Launch</a>
           </div>
         </div>
+
         <div class="item">
-          <img src="images/portfolio-item7.jpg" alt="" />
+          <img src="images/7carsharing.png" alt="P2P Car Sharing Darenta" />
           <div class="action">
-            <a href="#">Launch</a>
+            <a href="https://darenta.com" target="_blank">Launch</a>
           </div>
         </div>
+
         <div class="item">
-          <img src="images/portfolio-item8.jpg" alt="" />
+          <img src="images/8codesford.png" alt="SMM Marketing of CodeZima" />
           <div class="action">
-            <a href="#">Launch</a>
-          </div>
-        </div>
-        <div class="item">
-          <img src="images/portfolio-item9.jpg" alt="" />
-          <div class="action">
-            <a href="#">Launch</a>
-          </div>
-        </div>
-        <div class="item">
-          <img src="images/portfolio-item10.jpg" alt="" />
-          <div class="action">
-            <a href="#">Launch</a>
-          </div>
-        </div>
-        <div class="item">
-          <img src="images/portfolio-item11.jpg" alt="" />
-          <div class="action">
-            <a href="#">Launch</a>
-          </div>
-        </div>
-        <div class="item">
-          <img src="images/portfolio-item12.jpg" alt="" />
-          <div class="action">
-            <a href="#">Launch</a>
-          </div>
-        </div>
-        <div class="item">
-          <img src="images/portfolio-item13.jpg" alt="" />
-          <div class="action">
-            <a href="#">Launch</a>
-          </div>
-        </div>
-        <div class="item">
-          <img src="images/portfolio-item14.jpg" alt="" />
-          <div class="action">
-            <a href="#">Launch</a>
-          </div>
-        </div>
-        <div class="item">
-          <img src="images/portfolio-item15.jpg" alt="" />
-          <div class="action">
-            <a href="#">Launch</a>
-          </div>
-        </div>
-        <div class="item">
-          <img src="images/portfolio-item16.jpg" alt="" />
-          <div class="action">
-            <a href="#">Launch</a>
+            <a
+              href="https://www.facebook.com/CodesFord2020/reviews"
+              target="_blank"
+              >Launch</a
+            >
           </div>
         </div>
       </div>
