--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
     </header>
 
     <section class="home">
-      <img src="images/home-img.jpeg" class="home-img" alt="" />
+      <img
+        src="images/home-img.jpeg"
+        class="home-img"
+        alt="We help to achieve your goals"
+      />
       <div class="home-content">
         <h1>
           We help to achieve <br />
